rename files and add insert query

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -13,14 +13,21 @@
     <script type="text/javascript" src="/scripts/app.js"></script>
   </head>
   <body>
-    <!-- Header -->
-    <!-- <nav></nav> -->
     <main>
       <div>
         <form action="/maps/new" method="POST">
           <label for="map-title">Map Title</label>
           <input type="text" name="map-title" placeholder="Map Name">
-          <input type="dropdown">
+          <select name="map-category" id="">
+            <option value="nature">nature</option>
+            <option value="nature">nature</option>
+            <option value="nature">nature</option>
+            <option value="nature">nature</option>
+            <option value="nature">nature</option>
+          </select>
+
+          <input type="text">
+          <button type="submit">Create</button>
         </form>
       </div>
     </main>
