edit seed db for img url, edit maps insert query in maps route

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -15,19 +15,22 @@
   <body>
     <main>
       <div>
+        <h1>Create New Map</h1>
         <form action="/maps/new" method="POST">
           <label for="map-title">Map Title</label>
           <input type="text" name="map-title" placeholder="Map Name">
-          <select name="map-category" id="">
-            <option value="nature">nature</option>
-            <option value="nature">nature</option>
-            <option value="nature">nature</option>
-            <option value="nature">nature</option>
-            <option value="nature">nature</option>
+          <label for="map-category">Category</label>
+          <select name="map-category" id="map-category">
+            <option value="">Please Select a Category...</option>
+            <option value="city">City</option>
+            <option value="food">Food</option>
+            <option value="nature">Nature</option>
           </select>
-
-          <input type="text">
-          <button type="submit">Create</button>
+          <label for="map-description">Description</label>
+          <textarea name="map-description" id="map-description" cols="30" rows="10" placeholder="Map Description"></textarea>
+          <label for="map-img-url">Thumbnail Photo URL</label>
+          <input type="text" name="map-img-url" placeholder="Map thumbnail url">
+          <button type="submit">Create Map</button>
         </form>
       </div>
     </main>
