modified basic header w/o styling

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,7 +4,9 @@
         <a href="#">Favourites</a>
         <a href="#">My Maps</a>
         <a href="#">New Map</a>
+        <a href="#">Login</a>
+        <a href="#">Register</a>
     </nav>
   </div>
-  <div><%- include('_register') %></div>
+  <!-- <div><%- include('_register') %></div> -->
 </header>
