--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,8 +5,7 @@
         <a href="#">My Maps</a>
         <a href="#">New Map</a>
         <a href="#">Login</a>
-        <a href="#">Register</a>
+        <a href="/register">Register</a>
     </nav>
   </div>
-  <!-- <div><%- include('_register') %></div> -->
 </header>
