--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <title>WikiMap</title>
   </head>
 
   <body>
