--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,6 @@
 <header>
     <nav>
+      <div><a href="/">WikiMap</a></div>
       <div>
         <a href="#">Favourites</a>
         <a href="#">My Maps</a>
