--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,23 +14,32 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <title>TinyApp</title>
+    <!-- Latest compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
   </head>
   <body>
-  <div>
-    <form id="register-form">
-      <div>
-        <input type="text" name="name" placeholder="Full Name" />
-      </div>
-      <div class="form-group">
-        <input type="email" name="email" placeholder="Enter email" />
-      </div>
-      <div class="form-group">
-        <input type="password" name="password" placeholder="Password" />
-      </div>
-      <button type="submit">Submit</button>
-    </form>
-  </div>
-</html>
-</body>
+    <%- include('partials/_header') %>
+    <div>
+      <form id="register-form">
+        <div>
+          <input type="text" name="name" placeholder="Full Name" />
+        </div>
+        <div class="form-group">
+          <input type="email" name="email" placeholder="Enter email" />
+        </div>
+        <div class="form-group">
+          <input type="password" name="password" placeholder="Password" />
+        </div>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+  </body>
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </html>
