add req.session code to /new route

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -25,6 +25,7 @@
             <option value="city">City</option>
             <option value="food">Food</option>
             <option value="nature">Nature</option>
+            <option value="other">Other</option>
           </select>
           <label for="map-description">Description</label>
           <textarea name="map-description" id="map-description" cols="30" rows="10" placeholder="Map Description"></textarea>
