register form adds user to db

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,7 +23,7 @@
   <body>
     <%- include('partials/_header') %>
     <div>
-      <form id="register-form">
+      <form id="register-form" method="POST" action="/register">
         <div>
           <input type="text" name="name" placeholder="Full Name" />
         </div>
