--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -7,44 +7,44 @@
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/maps.css" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
   </head>
 
   <body>
+    <%- include('partials/_header') %>
 
     <h1>Recent Maps</h1>
 
     <main class="show-maps">
-
       <section id="map-container">
-
         <table class="table">
-
           <tbody>
-              <% for (const map of maps) { %>
-                <tr>
-                  <td>
-
-                    <div class="map-info">
-                      <img src="<%= map.map_image_url %>">
-                      <h2><a href="/maps/<%= map.id %>"><%= map.title %></a> by username</h2>
-                    </div>
-                    <p><%= map.description %></p>
-                    <small><%= map.category %></small>
-
-                  </td>
-                </tr>
-              <% } %>
+            <% for (const map of maps) { %>
+            <tr>
+              <td>
+                <div class="map-info">
+                  <img src="<%= map.map_image_url %>" />
+                  <h2>
+                    <a href="/maps/<%= map.id %>"><%= map.title %></a> by
+                    username
+                  </h2>
+                </div>
+                <p><%= map.description %></p>
+                <small><%= map.category %></small>
+              </td>
+            </tr>
+            <% } %>
           </tbody>
-
         </table>
-
       </section>
-
     </main>
-
   </body>
 </html>
