update ejs form and link bootstrap

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,30 +8,39 @@
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
   </head>
   <body>
     <main>
-      <div>
+      <div class="maps-new">
         <h1>Create New Map</h1>
         <form action="/maps/new" method="POST">
-          <label for="map-title">Map Title</label>
-          <input type="text" name="map-title" placeholder="Map Name">
-          <label for="map-category">Category</label>
-          <select name="map-category" id="map-category">
-            <option value="">Please Select a Category...</option>
-            <option value="city">City</option>
-            <option value="food">Food</option>
-            <option value="nature">Nature</option>
-            <option value="other">Other</option>
-          </select>
-          <label for="map-description">Description</label>
-          <textarea name="map-description" id="map-description" cols="30" rows="10" placeholder="Map Description"></textarea>
-          <label for="map-img-url">Thumbnail Photo URL</label>
-          <input type="text" name="map-img-url" placeholder="Map thumbnail url">
-          <button type="submit">Create Map</button>
+          <div class="mb-3">
+            <label for="map-title">Map Title</label>
+            <input type="text" name="map-title" placeholder="Map Name">
+          </div>
+          <div class="mb-3">
+            <label for="map-category">Category</label>
+            <select name="map-category" id="map-category">
+              <option value="">Please Select a Category...</option>
+              <option value="city">City</option>
+              <option value="food">Food</option>
+              <option value="nature">Nature</option>
+              <option value="other">Other</option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="map-description">Description</label>
+            <textarea name="map-description" id="map-description" rows="3" placeholder="Map Description"></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="map-img-url">Thumbnail Photo URL</label>
+            <input type="text" name="map-img-url" placeholder="Map thumbnail url">
+          </div>
+          <button type="submit" class="btn btn-primary">Create Map</button>
         </form>
       </div>
     </main>
