add maps-new scss initial styling, update the html format of the maps/new view

--- a/styles/maps-new.scss
+++ b/styles/maps-new.scss
@@ -1,5 +1,11 @@
-.map-new {
-  display: flex;
+main {
   width: 90%;
-  background-color: aqua;
+  margin: auto;
+
+  .map-new {
+    margin: auto;
+    padding: 1em;
+
+  }
+
 }
