register form checks if user exists

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,7 +5,7 @@
         <a href="#">Favourites</a>
         <a href="#">My Maps</a>
         <a href="#">New Map</a>
-        <a href="#">Login</a>
+        <a href="/login">Login</a>
         <a href="/register">Register</a>
     </nav>
   </div>
