--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,18 +23,7 @@
   <body>
     <%- include('partials/_header') %>
     <div>
-      <form id="register-form" method="POST" action="/register">
-        <div class="form-group">
-          <input
-            type="text"
-            name="name"
-            class="form-control"
-            id="exampleInputEmail1"
-            aria-describedby="emailHelp"
-            placeholder="Full Name"
-            required
-          />
-        </div>
+      <form id="register-form" method="POST" action="/login">
         <div class="form-group">
           <input
             type="email"
@@ -43,7 +32,6 @@
             id="exampleInputEmail1"
             aria-describedby="emailHelp"
             placeholder="Enter email"
-            required
           />
         </div>
         <div class="form-group">
@@ -53,14 +41,9 @@
             class="form-control"
             id="exampleInputPassword1"
             placeholder="Password"
-            required
           />
         </div>
-        <div>
-          <label for="img">Select image:</label>
-          <input type="file" id="img" name="img" accept="image/*" />
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Login</button>
       </form>
     </div>
   </body>
