--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/maps-new.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/users.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
@@ -16,21 +16,21 @@
   </head>
   <body>
     <main>
-      <table>
-        <thead>
-          <tr>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <img src="" alt="">
-            <div>
-              Description
-            </div>
-          </tr>
-        </tbody>
-      </table>
+
+      <% for (const row of rows) { %>
+        <div>
+          <img src="<%= row.map_image_url %>" alt="<%= row.title %>" class="owners-map">
+          <%= row.title %>
+
+          <%= row.description %>
+          <%= row.category %>
+          <a class="btn btn-primary" href="#">Edit</a>
+          <form action="">
+            <button class="btn btn-danger">Delete</button>
+          </form>
+        </div>
+      <% } %>
+
     </main>
 
   </body>
