display logged in as 'email' for all pages but :mapID

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -3,7 +3,7 @@
       <div><a href="/maps">WikiMap</a></div>
       <div>
         <a href="#">Favourites</a>
-        <a href="/profile">My Maps</a>
+        <a href="#">My Maps</a>
         <a href="/maps/new">New Map</a>
         <% if (!user) { %>
         <a href="/login">Login</a>
