--- a/styles/map-viewer.scss
+++ b/styles/map-viewer.scss
@@ -1,5 +1,33 @@
-#map-viewport {
+h1 {
   width: 66%;
-  height: 500px;
-  border: 3px solid cadetblue;
+  margin: 0 auto;
+}
+
+.container {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+
+  #map-viewport {
+    width: 66%;
+    height: 500px;
+    border: 3px solid cadetblue;
+    margin-bottom: 1em;
+  }
+
+  aside {
+    width: 66%;
+    border: 3px solid cadetblue;
+
+    tbody {
+      border: 2px solid cadetblue;
+    }
+  }
+
+}
+
+#mapID {
+  display: none;
 }
