--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -34,7 +34,7 @@
                   <img src="<%= map.map_image_url %>" />
                   <h2>
                     <a href="/maps/<%= map.id %>"><%= map.title %></a> by
-                    <a href="/maps"><%= map.owner_id %></a>
+                    <a href="/maps"><%= map.name %></a>
                   </h2>
                 </div>
                 <p><%= map.description %></p>
