Clean up unused files and functions

--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -13,9 +13,8 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <!-- <script type="text/javascript" src="/scripts/app.js"></script> -->
+    <script type="text/javascript" src="/scripts/geocode.js"></script>
     <script type="text/javascript" src="/scripts/initMap.js"></script>
   </head>
   <body>
