get address by clicking map, update input field

--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -29,8 +29,8 @@
 
       <div id="addLocation">
         <form method="POST" action="/maps/<%= map.id %>/edit">
-          <label for="address">Address</label>
-          <input name="address" type="text">
+          <label for="address">Address/Location</label>
+          <input id="location" name="address" type="text">
           <label for="markerTitle">Title</label>
           <input name="markerTitle">
           <label for="markerDesc">Description</label>
