favourites mobile view displays images in correct size

--- a/views/favourites.ejs
+++ b/views/favourites.ejs
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WikiMap - New</title>
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/users.css" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
@@ -25,20 +30,22 @@
         </section>
         <div id="favourites">
           <% for (const fav of favourites) { %>
-            <div class="profile-map">
-              <img src="<%= fav.map_image_url %>" alt="<%= fav.title %>" class="profile-map-img">
-              <div class="profile-map-content">
-                <%= fav.title %>
-                <%= fav.description %>
-                <%= fav.category %>
-              </div>
-              <div>
-                <a class="btn btn-primary" href="/maps/<%= fav.map_id %>">View</a>
-                <form action="">
-                  <button class="btn btn-danger">Remove Favourite</button>
-                </form>
-              </div>
+          <div class="profile-map">
+            <img
+              src="<%= fav.map_image_url %>"
+              alt="<%= fav.title %>"
+              class="profile-map-img"
+            />
+            <div class="profile-map-content">
+              <%= fav.title %> <%= fav.description %> <%= fav.category %>
             </div>
+            <div>
+              <a class="btn btn-primary" href="/maps/<%= fav.map_id %>">View</a>
+              <form action="">
+                <button class="btn btn-danger">Remove Favourite</button>
+              </form>
+            </div>
+          </div>
           <% } %>
         </div>
       </div>
