Add favourites buttons to /maps and some styling for maps view

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,8 +1,11 @@
 // See: https://sass-lang.com/
 
-body {
-  background-color: #EEE;
+nav {
+  background-color: gainsboro;
+}
 
+body {
+  background-color: gainsboro;
   h1, h2, h3, h4 {
     color: #244751;
   }
