--- a/views/map-viewer.ejs
+++ b/views/map-viewer.ejs
@@ -19,7 +19,9 @@
     <script type="text/javascript" src="/scripts/initMap.js"></script>
   </head>
   <body>
-    <%- include('partials/_header') %>
+    <header>
+      <%- include('partials/_header') %>
+    </header>
 
     <h2><%= map.title %></h2>
 
