--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -4,6 +4,7 @@
     <title>Wiki Maps</title>
 
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/maps.css" type="text/css" />
@@ -15,11 +16,15 @@
     />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+    <script type="text/javascript" src="/scripts/favourite.js"></script>
     <!-- <script type="text/javascript" src="/scripts/app.js"></script> -->
   </head>
 
   <body>
-    <%- include('partials/_header') %>
+    <header>
+      <%- include('partials/_header') %>
+    </header>
+
 
     <h1>Recent Maps</h1>
 
@@ -37,8 +42,12 @@
                     <a href="/maps"><%= map.name %></a>
                   </h2>
                 </div>
+                <button class="favMap" data-placement="top" title="Add Map to Favourites!">
+                  <i class="fa fa-heart"></i>
+                </button>
                 <p><%= map.description %></p>
                 <small><%= map.category %></small>
+                <small class='mapID'><%= map.id %></small>
               </td>
             </tr>
             <% } %>
