--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,16 +24,36 @@
     <%- include('partials/_header') %>
     <main>
       <div class="profile-maps-container">
-        <h1 id="my-maps">My Maps</h1>
-        <h1 id="my-contributions">My Contributions</h1>
+        <div class="profile-header-views mb-3">
+          <!-- <ul class="nav justify-content-center">
+            <li id="my-maps" class="nav-item">My Maps</li>
+            <li id="my-contributions" class="nav-item">My Contributions</li>
+          </ul> -->
+          <ul class="nav justify-content-center">
+            <li class="nav-item nav-link">
+              <h4 id="my-maps">My Maps</h4>
+            </li>
+            <li class="nav-item nav-link">
+              <h4 id="my-favourites">My Favourites</h4>
+            </li>
+            <li class="nav-item nav-link">
+              <h4 id="my-contributions">My Contributions</h4>
+            </li>
+          </ul>
+        </div>
         <section id="owner-maps-container" class="show">
           <% for (const ownerMap of ownerMaps) { %>
-            <div class="profile-map">
+            <header>
+              <h5><%= ownerMap.title %></h5>
+              <span>Category: </span>
+              <small class="badge bg-info text-dark">
+                <%= ownerMap.category %>
+              </small>
+            </header>
+            <div class="profile-map mb-3">
               <img src="<%= ownerMap.map_image_url %>" alt="<%= ownerMap.title %>" class="profile-map-img">
               <div class="profile-map-content">
-                <%= ownerMap.title %>
                 <%= ownerMap.description %>
-                <%= ownerMap.category %>
               </div>
               <div>
                 <a class="btn btn-primary" href="/maps/<%= ownerMap.id %>">View</a>
@@ -44,14 +64,42 @@
             </div>
           <% } %>
         </section>
-        <section id="contribution-maps-container" class="hide">
+        <section id="favourite-maps-container" class="hide">
+          <% for (const favMap of favouriteMaps) { %>
+            <header>
+              <h5><%= favMap.title %></h5>
+              <span>Category: </span>
+              <small class="badge bg-info text-dark">
+                <%= favMap.category %>
+              </small>
+            </header>
+            <div class="profile-map">
+              <img src="<%= favMap.map_image_url %>" alt="<%= favMap.title %>" class="profile-map-img">
+              <div class="profile-map-content">
+                <%= favMap.description %>
+              </div>
+              <div>
+                <a class="btn btn-primary" href="/maps/<%= favMap.map_id %>">View</a>
+                <form action="">
+                  <button class="btn btn-danger">Remove Favourite</button>
+                </form>
+              </div>
+            </div>
+            <% } %>
+          </section>
+          <section id="contribution-maps-container" class="hide">
           <% for (const contributionMap of contributionMaps) { %>
+            <header>
+              <h5><%= contributionMap.title %></h5>
+              <span>Category: </span>
+              <small class="badge bg-info text-dark">
+                <%= contributionMap.category %>
+              </small>
+            </header>
             <div class="profile-map">
               <img src="<%= contributionMap.map_image %>" alt="<%= contributionMap.title %>" class="profile-map-img">
               <div class="profile-map-content">
-                <%= contributionMap.title %>
                 <%= contributionMap.description %>
-                <%= contributionMap.category %>
               </div>
               <div>
                 <a class="btn btn-primary" href="/maps/<%= contributionMap.id %>">View</a>
